# SWARM

./: .gitignore  CMakeLists.txt  README.md  diagnose_swarm.sh  globals.cpp  globals.h  network_log.csv
agent/behaviors/: exploration_behaviour.cpp  exploration_behaviour.h
agent/controller/: underwater_agent.lua  underwater_agent_controller.cpp  underwater_agent_controller.h
agent/models/: kinematic_model.cpp  kinematic_model.h
agent/state/: agent_state.h
algorithms/localization/: bayesian_distributed_localization.cpp  bayesian_distributed_localization.h  consensus_localization.cpp  consensus_localization.h  ekf_distributed.cpp  ekf_distributed.h  factor_graph_light.cpp  factor_graph_light.h  localization_stack.cpp  localization_stack.h  particle_filter.cpp  particle_filter.h  position_estimation.h  range_observation.h
core/communication/: packet.cpp  packet.h
core/config/: argos_generator.py  config_loader.cpp  config_loader.h  experiment_config.h
environment/channel/: acoustic_channel.cpp  acoustic_channel.h  channel_result.h  fading_model.cpp  fading_model.h  multipath_model.cpp  multipath_model.h  snr_model.cpp  snr_model.h
environment/physics/: bouyancy.cpp  bouyancy.h  current_field.cpp  current_field.h  drag_model.cpp  drag_model.h  mobility_model.cpp  mobility_model.h
environment/sensing/: range_sensor.cpp  range_sensor.h
experiments/: experiment_config.xml  test_gui.argos
experiments/templates/: swarm_template.argos
middleware/: core.h  system.h
middleware/events/: event.h  (+4 more)
visualization/: network_renderer.cpp  network_renderer.h
(+30 files in other folders)
